== history for distribution Any-Daemon-HTTP

version 0.28:

	Fixes:
	- call ::VirtualHost::new() without handlers

	Changes:
	- ::VirtualHost::new(aliases) defaults to 'AUTO'

	Improvements:
	- find virtual-host handler for '/'.
	- run(new_connection) with method name.
	- add ::VirtualHost->new aliases proxy and directory.

version 0.27: Sun  4 Mar 12:26:01 CET 2018

	Fixes:
	- ::VirtualHost::new(handlers) now initialized via ::addHandler()
	- do only randomize max_conn when large enough.

	Improvements:
	- ::VirtualHost::new(handler) alternative for ::new(handlers)
	- convert to GIT and GitHub

version 0.26: Mon Sep 19 23:18:38 CEST 2016

	Fixes:
	- include examples in the manual-pages

	Improvements:
	- multi-proxy
	- ::VirtualHost::new(aliases) value 'AUTO'

version 0.25: Tue Apr 15 08:49:00 CEST 2014

	Fixes:
	- deadline passed log showed '0' seconds passed
	- changes in LogReport [cpantesters]

	Improvements:
	- changed documentation style
	- wait upto 30 seconds when the socket is still in use.

version 0.24: Sun Jan  5 17:38:19 CET 2014

	Changes:
	- removed ::HTTP::new(use_ssl), now detected from portnumber
	- move to Log::Report 1.00
	- use IO::Socket::IP, to support IPv6

	Fixes:
	- no warning when request does not have Host
	- show destination and owner of symlinks
	- vhost not finding directory.
	  rt.cpan.org#91672 [Kenney Westerhof]

	Improvements:	
	- ::Directory make charset configurable.
	- minor cleanups after demo at Perl Mongers A'dam meeting
	- now multiple ports possible
	- deprecate ::HTTP::new(host) and ::new(socket) for new option
	  new(listen).
	- add ::HTTP::run(max_conn_per_child)
	- extracted ::HTTP::Source as base from ::HTTP::Directory
	- add ::HTTP::Proxy
	- ::Directory and ::Proxy objects share the "sources" path
	  mapping.

version 0.23: Thu Nov 28 15:36:45 CET 2013
	Improvement:
	- move towards POSIX::1003

version 0.22: Mon Oct 28 10:18:38 CET 2013
	Fixes:
	- socket listens only on tcp